--- a/requirements.txt
+++ b/requirements.txt
@@ -1,22 +1,13 @@
 # common/   System packages (usually with `python-` prefix)
 # ---------------------------------------------------------
-matplotlib>=2.0.0
 numpy>=1.12.0
-scipy>=0.19.0
-pandas>=0.19.2
-scikit-learn>=0.18.1
-pytz>=2016.10
-pyaml>=3.12
-ruamel.yaml>=0.13.14
 pip>=9.0.0
 
 # aur/      Less common system packages (usually with `python-` prefix)
 # ---------------------------------------------------------------------
-tensorflow>=0.12.1
-rethinkdb>=2.3.0
-tabulate>=0.7.7
+tensorflow>=1.1
 
-# pip       The previous options are not available or broken
+# pip       The following options are not available or broken
 # ----------------------------------------------------------
 typing>=3.5.3.0
 cxflow>=0.6
