Fix CI for the updated requirements.txt

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -19,7 +19,7 @@ references:
     run:
       name: Install.
       command: |
-        pip3 install git+https://github.com/Cognexa/cxflow.git
+        pip3 install tensorflow
         pip3 install .
 
   test: &test
