--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -19,6 +19,7 @@ references:
     run:
       name: Install.
       command: |
+        pip3 install -r requirements.txt
         pip3 install .
 
   test: &test
