--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -7,18 +7,20 @@ references:
       name: Install dependencies on Ubuntu.
       command: |
         apt-get update -qy
-        apt-get install -y git python3-dev python3-pip
+        apt-get install -y git python3-dev python3-pip curl
   
   arch_deps: &arch_deps
     run:
       name: Install dependencies on Arch Linux.
       command: |
-        pacman -S --noconfirm python python-pip git base-devel
+        pacman -S --noconfirm python python-pip git base-devel curl
   
   install: &install
     run:
       name: Install.
       command: |
+        source <(curl -fsSL https://raw.githubusercontent.com/Cognexa/ci-utils/master/git-utils.sh)
+        fallback_pip_install_branch https://github.com/Cognexa/cxflow.git "$CIRCLE_BRANCH"
         pip3 install .
 
   test: &test
