--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -8,13 +8,13 @@ references:
       command: |
         apt-get update -qy
         apt-get install -y git python3-dev python3-pip curl
-  
+
   arch_deps: &arch_deps
     run:
       name: Install dependencies on Arch Linux.
       command: |
         pacman -S --noconfirm python python-pip git base-devel curl
-  
+
   install: &install
     run:
       name: Install.
@@ -34,8 +34,21 @@ references:
       name: PyPI deploy
       command: |
         pip3 install wheel setuptools --upgrade
-        ./.circle_pypi_deploy.sh
+        .circleci/pypi_deploy.sh
+
+  add_rw_key: &add_rw_key
+    add_ssh_keys:
+      fingerprints:
+        - "04:f1:4a:89:30:eb:e6:d0:d7:e5:0b:fc:f4:72:12:d8"
+
+  doc: &doc
+    run:
+      name: Generate documentation
+      command: |
+        .circleci/doc_deploy.sh
+
 jobs:
+
   test_ubuntu_latest:
     docker:
       - image: ubuntu:latest
@@ -67,11 +80,30 @@ jobs:
       - *test
       - *deploy
 
+  generate_documentation:
+    docker:
+      - image: ubuntu:rolling
+    working_directory: ~/cxflow-tensorflow
+    steps:
+      - *ubuntu_deps
+      - checkout
+      - *install
+      - *add_rw_key
+      - *doc
+
 workflows:
 
   version: 2
-  test-matrix:
+  test-doc-deploy:
     jobs:
       - test_ubuntu_latest
       - test_ubuntu_rolling
       - test_archlinux
+      - generate_documentation:
+          filters:
+            branches:
+              only: dev
+          requires:
+            - test_ubuntu_latest
+            - test_ubuntu_rolling
+            - test_archlinux
