Doc gen refactor (#50)
* move doc deployment to ci-utils repo

* move common documentation-related files to a separate repository

* Test doc deploy

* fix submodule url

* updated docs base

* Update config.yml

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -45,7 +45,7 @@ references:
     run:
       name: Generate documentation
       command: |
-        .circleci/doc_deploy.sh
+        bash <(curl -fsSL https://raw.githubusercontent.com/Cognexa/ci-utils/master/doc_deploy.sh)
 
 jobs:
 
