--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -34,7 +34,7 @@ references:
       name: PyPI deploy
       command: |
         pip3 install wheel setuptools --upgrade
-        .circleci/pypi_deploy.sh
+        bash <(curl -fsSL https://raw.githubusercontent.com/Cognexa/ci-utils/master/pypi_deploy.sh)
 
   add_rw_key: &add_rw_key
     add_ssh_keys:
@@ -78,7 +78,6 @@ jobs:
       - checkout
       - *install
       - *test
-      - *deploy
 
   generate_documentation:
     docker:
@@ -90,6 +89,16 @@ jobs:
       - *install
       - *add_rw_key
       - *doc
+
+  deploy:
+    docker:
+      - image: pritunl/archlinux:2017-07-08
+    working_directory: ~/cxflow-tensorflow
+    steps:
+      - *arch_deps
+      - checkout
+      - *install
+      - *deploy
 
 workflows:
 
@@ -103,6 +112,14 @@ workflows:
           filters:
             branches:
               only: dev
+          requires:
+            - test_ubuntu_latest
+            - test_ubuntu_rolling
+            - test_archlinux
+      - deploy:
+          filters:
+            branches:
+              only: master
           requires:
             - test_ubuntu_latest
             - test_ubuntu_rolling
