--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -124,3 +124,4 @@ workflows:
             - test_ubuntu_latest
             - test_ubuntu_rolling
             - test_archlinux
+            - generate_documentation
