--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,4 @@
 # tensorflow>=1.3.0 to be installed manually
 # tensorflow-tensorboard>=0.1.5 to be installed manually
-cxflow>=0.8.1
+emloop>=0.8.1
 numpy>=1.13.1
