--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -23,8 +23,9 @@ references:
       command: |
         source <(curl -fsSL https://raw.githubusercontent.com/iterait/ci-utils/master/git-utils.sh)
         fallback_pip_install_branch https://github.com/iterait/emloop.git "$CIRCLE_BRANCH"
-        pip3 install .
         pip3 install tensorflow
+        pip3 install .
+        pip3 install -r requirements-tests.txt
 
   test: &test
     run:
