--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -8,13 +8,13 @@ references:
       command: |
         apt-get update -qy
         apt-get install -y git python3-dev python3-pip curl
-        pip3 install coveralls coverage
+        pip3 install coveralls coverage tensorflow
 
   arch_deps: &arch_deps
     run:
       name: Install dependencies on Arch Linux.
       command: |
-        pacman -Syu --noconfirm python python-pip git base-devel curl
+        pacman -Syu --noconfirm python python-pip git base-devel curl python-tensorflow
         pip install coveralls coverage
 
   install: &install
@@ -23,7 +23,7 @@ references:
       command: |
         source <(curl -fsSL https://raw.githubusercontent.com/iterait/ci-utils/master/git-utils.sh)
         fallback_pip_install_branch https://github.com/iterait/emloop.git "$CIRCLE_BRANCH"
-        pip3 install tensorflow
+        # Note that TensorFlow is already installed
         pip3 install .
         pip3 install -r requirements-tests.txt
 
