--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -14,7 +14,7 @@ references:
     run:
       name: Install dependencies on Arch Linux.
       command: |
-        pacman -Syu --noconfirm python python-pip git base-devel curl python-tensorflow
+        pacman -Syu --noconfirm python python-pip git curl python-tensorflow
         pip install coveralls coverage
 
   install: &install
@@ -82,7 +82,7 @@ jobs:
 
   test_archlinux:
     docker:
-      - image: archimg/base-devel
+      - image: archlinux/base
     working_directory: ~/emloop-tensorflow
     steps:
       - *arch_deps
@@ -92,7 +92,7 @@ jobs:
 
   coverage:
     docker:
-      - image: archimg/base-devel
+      - image: archlinux/base
     working_directory: ~/emloop
     steps:
       - *arch_deps
