Use the official Archlinux Docker image for deployment

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -113,7 +113,7 @@ jobs:
 
   deploy:
     docker:
-      - image: archimg/base-devel
+      - image: archlinux/base
     working_directory: ~/emloop-tensorflow
     steps:
       - *arch_deps
