--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,6 @@
-# tensorflow>=1.3.0 to be installed manually
-# tensorflow-tensorboard>=0.1.5 to be installed manually
-tensorflow-estimator
-emloop>=0.1.0
-numpy>=1.13.1
+# tensorflow>=1.13.0 to be installed manually
+# tensorflow-tensorboard>=1.13 to be installed manually
 
-# TF 1.11
-gast
-astor
-grpcio
-termcolor
+tensorflow-estimator>=1.13
+emloop>=0.2.0
+numpy>=1.16
